@@ -1,7 +1,9 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.3
-12-05-2022	Add circos.mhtplot2()
+14-05-2022	Add circos.mhtplot2(); Clarificaiton of YAML declaration in gap.Rmd
+		Add cex.axis to axis(1) in mhtplot.trunc() & notes on adjustment data
+		Mask circos.cnvplot due to excessive running time.
 
 Version 1.2.3-6
 10-05-2022	Switch back to three-character maintainer name.
